--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,11 +1,49 @@
 $breakpoint-xl: 'only screen and (min-width:1200px)';
-
 $breakpoint-lg: 'only screen and (min-width:992px) and (max-width:1199px)';
-
 $breakpoint-md: 'only screen and (min-width:768px) and (max-width:991px)';
-
 $breakpoint-sm: 'only screen and (min-width:576px) and (max-width:767px)';
-
 $breakpoint-xs: 'only screen and (max-width:767px)';
-
 $breakpoint-xs-landscape: 'only screen and (min-width:480px) and (max-width:767px)';
+.search-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    background: #fff;
+    border-radius: 30px;
+    padding: 5px 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    input {
+        border: none;
+        outline: none;
+        background: none;
+        padding: 10px;
+        border-radius: 30px;
+        font-size: 14px;
+        color: #333;
+    }
+    button {
+        background: none;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 10px;
+        font-size: 16px;
+        color: #333;
+        &:hover {
+            color: #000;
+        }
+    }
+    @media #{$breakpoint-md},
+    #{$breakpoint-sm},
+    #{$breakpoint-xs} {
+        position: relative;
+        top: auto;
+        left: auto;
+        transform: none;
+        width: 100%;
+        margin: 10px 0;
+    }
+}
