--- a/css/one-music-icon.css
+++ b/css/one-music-icon.css
@@ -1,326 +1,421 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?xracs4');
-  src:  url('../fonts/icomoon.eot?xracs4#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?xracs4') format('truetype'),
-    url('../fonts/icomoon.woff?xracs4') format('woff'),
-    url('../fonts/icomoon.svg?xracs4#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'icomoon';
+    src: url('../fonts/icomoon.eot?xracs4');
+    src: url('../fonts/icomoon.eot?xracs4#iefix') format('embedded-opentype'), url('../fonts/icomoon.ttf?xracs4') format('truetype'), url('../fonts/icomoon.woff?xracs4') format('woff'), url('../fonts/icomoon.svg?xracs4#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+[class^="icon-"],
+[class*=" icon-"] {
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-alarm-clock:before {
-  content: "\e900";
+    content: "\e900";
 }
+
 .icon-atomic:before {
-  content: "\e901";
+    content: "\e901";
 }
+
 .icon-bar-chart:before {
-  content: "\e902";
+    content: "\e902";
 }
+
 .icon-battery:before {
-  content: "\e903";
+    content: "\e903";
 }
+
 .icon-battery-1:before {
-  content: "\e904";
+    content: "\e904";
 }
+
 .icon-bell:before {
-  content: "\e905";
+    content: "\e905";
 }
+
 .icon-bluetooth:before {
-  content: "\e906";
+    content: "\e906";
 }
+
 .icon-book:before {
-  content: "\e907";
+    content: "\e907";
 }
+
 .icon-box:before {
-  content: "\e908";
+    content: "\e908";
 }
+
 .icon-calculator:before {
-  content: "\e909";
+    content: "\e909";
 }
+
 .icon-calendar:before {
-  content: "\e90a";
+    content: "\e90a";
 }
+
 .icon-car:before {
-  content: "\e90b";
+    content: "\e90b";
 }
+
 .icon-chat:before {
-  content: "\e90c";
+    content: "\e90c";
 }
+
 .icon-chat-1:before {
-  content: "\e90d";
+    content: "\e90d";
 }
+
 .icon-checked:before {
-  content: "\e90e";
+    content: "\e90e";
 }
+
 .icon-cloud:before {
-  content: "\e90f";
+    content: "\e90f";
 }
+
 .icon-cloud-computing:before {
-  content: "\e910";
+    content: "\e910";
 }
+
 .icon-cloud-computing-1:before {
-  content: "\e911";
+    content: "\e911";
 }
+
 .icon-compass:before {
-  content: "\e912";
+    content: "\e912";
 }
+
 .icon-credit-card:before {
-  content: "\e913";
+    content: "\e913";
 }
+
 .icon-cursor:before {
-  content: "\e914";
+    content: "\e914";
 }
+
 .icon-cutlery:before {
-  content: "\e915";
+    content: "\e915";
 }
+
 .icon-download:before {
-  content: "\e916";
+    content: "\e916";
 }
+
 .icon-edit:before {
-  content: "\e917";
+    content: "\e917";
 }
+
 .icon-envelope:before {
-  content: "\e918";
+    content: "\e918";
 }
+
 .icon-eraser:before {
-  content: "\e919";
+    content: "\e919";
 }
+
 .icon-eye:before {
-  content: "\e91a";
+    content: "\e91a";
 }
+
 .icon-fast-forward:before {
-  content: "\e91b";
+    content: "\e91b";
 }
+
 .icon-favorites:before {
-  content: "\e91c";
+    content: "\e91c";
 }
+
 .icon-file:before {
-  content: "\e91d";
+    content: "\e91d";
 }
+
 .icon-file-1:before {
-  content: "\e91e";
+    content: "\e91e";
 }
+
 .icon-file-2:before {
-  content: "\e91f";
+    content: "\e91f";
 }
+
 .icon-file-3:before {
-  content: "\e920";
+    content: "\e920";
 }
+
 .icon-filter:before {
-  content: "\e921";
+    content: "\e921";
 }
+
 .icon-flag:before {
-  content: "\e922";
+    content: "\e922";
 }
+
 .icon-folder:before {
-  content: "\e923";
+    content: "\e923";
 }
+
 .icon-folder-1:before {
-  content: "\e924";
+    content: "\e924";
 }
+
 .icon-gamepad:before {
-  content: "\e925";
+    content: "\e925";
 }
+
 .icon-heart:before {
-  content: "\e926";
+    content: "\e926";
 }
+
 .icon-home:before {
-  content: "\e927";
+    content: "\e927";
 }
+
 .icon-id-card:before {
-  content: "\e928";
+    content: "\e928";
 }
+
 .icon-idea:before {
-  content: "\e929";
+    content: "\e929";
 }
+
 .icon-image:before {
-  content: "\e92a";
+    content: "\e92a";
 }
+
 .icon-inbox:before {
-  content: "\e92b";
+    content: "\e92b";
 }
+
 .icon-information:before {
-  content: "\e92c";
+    content: "\e92c";
 }
+
 .icon-key:before {
-  content: "\e92d";
+    content: "\e92d";
 }
+
 .icon-laptop:before {
-  content: "\e92e";
+    content: "\e92e";
 }
+
 .icon-layers:before {
-  content: "\e92f";
+    content: "\e92f";
 }
+
 .icon-like:before {
-  content: "\e930";
+    content: "\e930";
 }
+
 .icon-line-chart:before {
-  content: "\e931";
+    content: "\e931";
 }
+
 .icon-loupe:before {
-  content: "\e932";
+    content: "\e932";
 }
+
 .icon-mail:before {
-  content: "\e933";
+    content: "\e933";
 }
+
 .icon-map:before {
-  content: "\e934";
+    content: "\e934";
 }
+
 .icon-medal:before {
-  content: "\e935";
+    content: "\e935";
 }
+
 .icon-megaphone:before {
-  content: "\e936";
+    content: "\e936";
 }
+
 .icon-message:before {
-  content: "\e937";
+    content: "\e937";
 }
+
 .icon-message-1:before {
-  content: "\e938";
+    content: "\e938";
 }
+
 .icon-message-2:before {
-  content: "\e939";
+    content: "\e939";
 }
+
 .icon-microphone:before {
-  content: "\e93a";
+    content: "\e93a";
 }
+
 .icon-money:before {
-  content: "\e93b";
+    content: "\e93b";
 }
+
 .icon-monitor:before {
-  content: "\e93c";
+    content: "\e93c";
 }
+
 .icon-music:before {
-  content: "\e93d";
+    content: "\e93d";
 }
+
 .icon-next:before {
-  content: "\e93e";
+    content: "\e93e";
 }
+
 .icon-padlock:before {
-  content: "\e93f";
+    content: "\e93f";
 }
+
 .icon-padlock-1:before {
-  content: "\e940";
+    content: "\e940";
 }
+
 .icon-paint-brush:before {
-  content: "\e941";
+    content: "\e941";
 }
+
 .icon-pause:before {
-  content: "\e942";
+    content: "\e942";
 }
+
 .icon-phone-call:before {
-  content: "\e943";
+    content: "\e943";
 }
+
 .icon-photo-camera:before {
-  content: "\e944";
+    content: "\e944";
 }
+
 .icon-placeholder:before {
-  content: "\e945";
+    content: "\e945";
 }
+
 .icon-planet-earth:before {
-  content: "\e946";
+    content: "\e946";
 }
+
 .icon-play-button:before {
-  content: "\e947";
+    content: "\e947";
 }
+
 .icon-power-button:before {
-  content: "\e948";
+    content: "\e948";
 }
+
 .icon-presentation:before {
-  content: "\e949";
+    content: "\e949";
 }
+
 .icon-printer:before {
-  content: "\e94a";
+    content: "\e94a";
 }
+
 .icon-reload:before {
-  content: "\e94b";
+    content: "\e94b";
 }
+
 .icon-return:before {
-  content: "\e94c";
+    content: "\e94c";
 }
+
 .icon-rss:before {
-  content: "\e94d";
+    content: "\e94d";
 }
+
 .icon-safebox:before {
-  content: "\e94e";
+    content: "\e94e";
 }
+
 .icon-settings:before {
-  content: "\e94f";
+    content: "\e94f";
 }
+
 .icon-settings-1:before {
-  content: "\e950";
+    content: "\e950";
 }
+
 .icon-settings-2:before {
-  content: "\e951";
+    content: "\e951";
 }
+
 .icon-share:before {
-  content: "\e952";
+    content: "\e952";
 }
+
 .icon-shield:before {
-  content: "\e953";
+    content: "\e953";
 }
+
 .icon-shopping-cart:before {
-  content: "\e954";
+    content: "\e954";
 }
+
 .icon-smartphone:before {
-  content: "\e955";
+    content: "\e955";
 }
+
 .icon-speaker:before {
-  content: "\e956";
+    content: "\e956";
 }
+
 .icon-speakers:before {
-  content: "\e957";
+    content: "\e957";
 }
+
 .icon-trash:before {
-  content: "\e958";
+    content: "\e958";
 }
+
 .icon-trophy:before {
-  content: "\e959";
+    content: "\e959";
 }
+
 .icon-upload:before {
-  content: "\e95a";
+    content: "\e95a";
 }
+
 .icon-user:before {
-  content: "\e95b";
+    content: "\e95b";
 }
+
 .icon-user-1:before {
-  content: "\e95c";
+    content: "\e95c";
 }
+
 .icon-user-2:before {
-  content: "\e95d";
+    content: "\e95d";
 }
+
 .icon-user-3:before {
-  content: "\e95e";
+    content: "\e95e";
 }
+
 .icon-users:before {
-  content: "\e95f";
+    content: "\e95f";
 }
+
 .icon-video-camera:before {
-  content: "\e960";
+    content: "\e960";
 }
+
 .icon-wifi:before {
-  content: "\e961";
+    content: "\e961";
 }
+
 .icon-zoom-in:before {
-  content: "\e962";
+    content: "\e962";
 }
+
 .icon-zoom-out:before {
-  content: "\e963";
+    content: "\e963";
 }
